packages/components/tree/style/index.less
@import '../../style/mixins/reset.less';

.@{tree-prefix} {
  .reset-component();

  font-size: @tree-font-size;
  background-color: @tree-background-color;
  border-radius: @border-radius-sm;
  transition: background-color @transition-duration-base;

  &-focused:not(:hover):not(&-active) {
    background-color: @tree-background-color-focused;
  }

  &-blocked {
    .@{tree-node-prefix}-content {
      flex: auto;
    }
  }

  &-show-line {
    .@{tree-node-prefix} {

      &-last {
        .@{tree-node-prefix}-leaf-line {

          &::before {
            bottom: 50%;
          }
        }
      }

      &-expand {
        position: relative;
        color: @tree-expand-icon-color;

        &-top-line {
          position: absolute;
          width: @tree-node-line-width;
          height: (@tree-node-content-height / 2 - 4);
          top: -6px;
          right: 50%;
          border-right: @tree-node-line-border;
        }

        &::after {
          position: absolute;
          width: (@tree-node-content-height / 4);
          height: (@tree-node-content-height / 2);
          margin-left: 4px;
          border-bottom: @tree-node-line-border;
          content: ' ';
        }
      }

      &:not(&-expanded):not(&-last) {
        .@{tree-node-prefix}-expand {

          &::before {
            position: absolute;
            top: (@tree-node-content-height - 6);
            right: 50%;
            width: @tree-node-line-width;
            height: (@tree-node-content-height / 2 - 4);
            border-right: @tree-node-line-border;
            content: ' ';
          }
        }
      }
    }

    .@{tree-node-prefix}-indent {
      align-self: stretch;
      white-space: nowrap;

      &-unit {
        position: relative;
        height: 100%;

        &::before {
          position: absolute;
          top: -@tree-node-padding-vertical;
          right: (@tree-node-content-height / 2);
          bottom: -@tree-node-padding-vertical;
          border-right: @tree-node-line-border;
          content: '';
        }
      }
    }
  }

}

.@{tree-node-prefix} {
  display: flex;
  align-items: center;
  padding: @tree-node-padding-vertical 0;

  .@{icon-prefix} {
    font-size: @tree-icon-font-size;
  }

  &-indent {

    &-noop-unit,
    &-unit {
      display: inline-block;
      width: @tree-node-content-height;
    }
  }

  &-expand {
    width: @tree-node-content-height;
    line-height: @tree-node-content-height;
    text-align: center;
    cursor: pointer;
    margin-right: 4px;

    &-noop {
      cursor: default;
    }
  }

  &-checkbox {
    margin: @tree-node-checkbox-margin;
  }

  &-leaf {
    width: @tree-node-content-height;
    line-height: @tree-node-content-height;
    align-self: stretch;
    text-align: center;
    cursor: default;

    &-line {
      position: relative;
      z-index: 1;
      display: inline-block;
      width: 100%;
      height: 100%;

      &::before {
        position: absolute;
        top: -@tree-node-padding-vertical;
        right: (@tree-node-content-height / 2);
        bottom: -@tree-node-padding-vertical;
        margin-left: -1px;
        border-right: @tree-node-line-border;
        content: ' ';
      }

      &::after {
        position: absolute;
        width: (@tree-node-content-height / 2);
        height: (@tree-node-content-height / 2);
        border-bottom: @tree-node-line-border;
        content: ' ';
      }
    }
  }

  &-content {
    position: relative;
    display: inline-flex;
    cursor: pointer;
    min-height: @tree-node-content-height;
    line-height: @tree-node-content-height;
    transition: background-color @transition-duration-base;

    &:hover {
      background-color: @tree-node-hover-background-color;
    }

    &-prefix,
    &-suffix {
      display: inline-block;
      text-align: center;
    }

    &-label {
      display: inline-block;
      flex-grow: 1;
      padding: @tree-node-content-label-padding;

      &-highlight {
        color: @tree-node-content-label-highlight-color;
      }
    }
  }

  &-active:not(&-disabled) &-content {
    background-color: @tree-node-hover-background-color;
  }

  &-selected:not(&-disabled) &-content {
    background-color: @tree-node-selected-background-color;
    color: @tree-node-selected-color ;
    &:hover {
      background-color: @tree-node-hover-background-color;
    }
  }

  &-disabled &-content {
    color: @tree-node-disabled-color;
    cursor: not-allowed;

    &:hover {
      background: transparent;
    }
  }

  &-drop-parent,
  &-drop-inside {
    box-shadow: 0 0 0 @tree-box-shadow-size @tree-box-shadow-color;
  }

  &-drop-before &-content {
    box-shadow: 0 -@tree-box-shadow-size 0 0 @tree-box-shadow-color;
  }

  &-drop-after &-content {
    box-shadow: 0 @tree-box-shadow-size 0 0 @tree-box-shadow-color;
  }
}

